made images local, fixed long word overflow, some code cleanup

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -136,3 +136,7 @@ hr {
   border-radius: 5px;
   width: 100%;
 }
+
+p {
+  word-wrap: break-word;
+}
